account-widget-*: port to GtkGrid

https://bugzilla.gnome.org/show_bug.cgi?id=662903