libempathy-gtk/empathy-account-widget-sip.h
@@ -28,7 +28,7 @@ G_BEGIN_DECLS
 
 void empathy_account_widget_sip_build (EmpathyAccountWidget *self,
     const char *filename,
-    GtkWidget **table_common_settings);
+    GtkWidget **grid_common_settings);
 
 G_END_DECLS
 
